third_party/rust/paste/tests/ui/invalid-ident.stderr
error: `"0f"` is not a valid identifier
 --> $DIR/invalid-ident.rs:2:8
  |
2 |     fn [<0 f>]() {}
  |        ^^^^^^^
