third_party/rust/paste/tests/ui/invalid-ident.rs
paste::item! {
    fn [<0 f>]() {}
}

fn main() {}
